* The DHCP client now defaults to "internal". The default can be overriden
  at build time by using the --with-config-dhcp-default option of the
  configure script or at run time by setting the main.dhcp option in the
  configuration file.
* Added support for configuring fq_codel line discipline and mirred action.
* Added a possibility for distributions to ship dispatcher scripts in /usr/lib.

=============================================
NetworkManager-1.18
Overview of changes since NetworkManager-1.16
=============================================

This is a new stable release of NetworkManager.  Notable changes include:

* Add support for policy routing rules.
* Add support for VLAN filtering for Linux bridge.
* Support ieee-802-1 and ieee-802-3 LLDP TLVs.
* Allow large MTU sizes for infiniband/IPoIB connection profiles.
* Improve nmcli's handling of list options for connection properties.

=============================================
NetworkManager-1.16
Overview of changes since NetworkManager-1.14
=============================================

This is a new stable release of NetworkManager.  Notable changes include:

* Check connectivity per address family.
* Support "main.systemd-resolved" to let NetworkManager configure DNS settings
  in systemd-resolved without making it the main DNS plugin of NetworkManager.
* Write "/var/run/NetworkManager/no-stub-resolv.conf" with original nameservers.
  That is useful with caching DNS plugins like "systemd-resolved" or "dnsmasq" where
  "/var/run/NetworkManager/resolv.conf" refers to localhost.
* Change default "ipv4.dhcp-client-id" setting for the internal DHCP plugin from
  "duid" to "mac". This is a change in behavior on upgrade when using the internal
  DHCP plugin (unless the default is overwritten in "NetworkManager.conf" or specified
  per connection profile).
* Improve handling of DHCP router options with internal DHCP plugin. For one, accept